# dotfiles

./: .gitconfig  .gitignore  .tmux.conf  .zpreztorc  .zshrc  README.md  linux.sh  macos.sh
nvim/: _init.vim  coc-settings.json  init.lua  init.vim
pyglobal/: README.md  pyproject.toml
pyglobal/src/pyglobal/: __init__.py
