[project]
name = "pyglobal"
version = "0.1.0"
description = "iizukak's personal Python settings"
authors = [
    { name = "Kentaro Iizuka", email = "iizuka.kentaro@gmail.com" }
]
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "ipython>=8.16.1",
    "black>=23.9.1",
    "pytest>=7.4.2",
    "jinja2>=3.1.2",
    "pyyaml>=6.0.1",
    "markdown>=3.5",
    "neovim>=0.3.1",
    "pynvim>=0.4.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
